# tts

./: .gitignore  Pipfile  README.md  cli.py  index.html  setup.cfg  style.css
src/: cli.py
src/tts/: join_wavs.py  merge_mel_wav_out.py  utils.py
tts/: defaults.py  merge_mel_wav_out.py  utils.py
